syntax = "proto3";

package pull_service;

message PullRequest {
    repeated uint32 pair_indexes = 1;
    string chain_type = 2;
}

message PullResponseEvm {
    repeated uint32 pair_indexes = 1;
    bytes proof_bytes = 2;
}

message PullResponse {
    oneof resp {
        PullResponseEvm evm = 1;
    }
}

service PullService {
    rpc GetProof(PullRequest) returns (PullResponse);
}